--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/digital_class_room?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
-#spring.datasource.password=Nayana@123
-#spring.datasource.password=priyanka@123
+
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
@@ -16,7 +15,7 @@ admin.password = Admin@123
 # Email Properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=nehaambekar777@gmail.com
+spring.mail.username=apdhanorkar94@gmail.com
 spring.mail.password=htsz cndf jqot mnjb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -33,4 +32,4 @@ google.auth.url=https://accounts.google.com/o/oauth2/v2/auth
 google.token.url=https://oauth2.googleapis.com/token
 google.calendar.api=https://www.googleapis.com/calendar/v3/calendars
 
-# Contact Akshay Surjuse for google.client.id and google.client.secret
+# Contact Admin for google.client.id and google.client.secret
