Add mail password and solve authentication problem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,14 +9,14 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-admin.username = admin@school.com
+admin.username = apdhanorkar94@gmail.com
 admin.password = Admin@123
 
 # Email Properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=apdhanorkar94@gmail.com
-spring.mail.password=htsz cndf jqot mnjb
+spring.mail.username=anuragdummymail@gmail.com
+spring.mail.password=bfbb bxrv kfcq cnhi
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.trust=true
